<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/name"
            android:textColor="@color/gray"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/modify_realname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:hint="@string/name_hint"
            android:inputType="textPersonName"
            android:lines="1"
            android:maxLength="6"
            android:paddingLeft="5dp"
            android:singleLine="true" >
        </EditText>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/home_"
            android:textColor="@color/gray"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/modify_hometown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="80dp"
            android:gravity="center|left"
            android:hint="@string/home_sec"
            android:lines="1"
            android:paddingLeft="2dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:drawableBottom="@drawable/edit_ling" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="年龄"
            android:textColor="@color/gray"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/modify_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:lines="1"
            android:maxLength="6"
            android:paddingLeft="5dp"
            android:singleLine="true"
            android:hint="输入你的年龄"
            android:textColor="@color/black" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/mine_qiam"
            android:textColor="@color/gray"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/modify_qianming"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:hint="@string/mine_qiam_hint"
            android:lines="1"
            android:maxLength="30"
            android:paddingLeft="5dp"
            android:singleLine="true" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/mine_intro"
            android:textColor="@color/gray"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/modify_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:hint="@string/mine_intro_hint"
            android:lines="1"
            android:maxLength="30"
            android:paddingLeft="5dp"
            android:singleLine="true" />
    </FrameLayout>

     <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/my_hobby"
            android:textColor="@color/gray"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/modify_my_hobby"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:hint="@string/my_hobby_hint"
            android:lines="1"
            android:maxLength="30"
            android:paddingLeft="5dp"
            android:singleLine="true" />
    </FrameLayout>
    
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/my_place"
            android:textColor="@color/gray"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/modify_my_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:hint="@string/my_place_hint"
            android:lines="1"
            android:maxLength="30"
            android:paddingLeft="5dp"
            android:singleLine="true" />
    </FrameLayout>
    
    
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="55dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/phone"
            android:textColor="@color/gray"
            android:textSize="15sp" />

        <RadioGroup
            android:id="@+id/call_radiogroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="80dp"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/call_radiobtn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/private_" />

            <RadioButton
                android:id="@+id/call_radiobtn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/public_" />
        </RadioGroup>
    </FrameLayout>

</LinearLayout>