<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/navbar_bg" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/group_modify"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/g_detail_left"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:background="@drawable/sigin_back_selector" />

        <Button
            android:id="@+id/modify_head_submit"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="right|center_vertical"
            android:background="@drawable/submit_sec"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </FrameLayout>

    <ImageView
        android:id="@+id/head"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="16dp"
            android:text="@string/group_name"
            android:textColor="@color/gray"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/group_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/group_name_hint" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="16dp"
            android:text="@string/group_intro"
            android:textColor="@color/gray"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/group_introduce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/group_intro_hint" />
    </LinearLayout>

</LinearLayout>